--- a/src/it-spa.scss
+++ b/src/it-spa.scss
@@ -1,5 +1,5 @@
 @import "../node_modules/font-awesome/scss/font-awesome.scss";
-
+$fa-font-path: "../fonts";
 
 .treatmentRow {
     &:nth-child(odd) {
